# use_cda

./: .pre-commit-config.yaml  README.md  pyproject.toml
input/: CDA.LS_.HCP-Kernel-V0.1.xlsx
output/CDA_LS__HCP_Kernel_V0_1/: postgres.sql  yaml.yaml
resources/: sql_keywords_postgresql.yaml
src/cda/: __main__.py  pipeline.py
